--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "phonebook-react",
+  "name": "my-react-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fedorzvyk.github.io/phonebook-react/",
+  "homepage": "https://fedorzvyk.github.io/my-react-template/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
