--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "r_m",
+  "name": "r_and_m",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fedorzvyk.github.io/r_m/",
+  "homepage": "https://fedorzvyk.github.io/r_and_m/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
