--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
